[package]
name = "clean-alert"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
csv = "1.1.6"
itertools = "0.10.1"
openssl-probe = "0.1.5"
rand = "0.8.4"
reqwest = "0.11.6"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
slack_api = { version = "0.23.1", features = ["sync", "reqwest_blocking"] }
ureq = { version = "2.3.0", features = ["json"] }
